Fix: z-index issues

--- a/src/styles/wallet.css
+++ b/src/styles/wallet.css
@@ -498,7 +498,7 @@
   height: 40px;
   background: #FE7807;
   position: relative;
-  z-index:10;
+  z-index:1;
 }
 .octagon:before {
   content: "";
